Fix page jump

--- a/src/styles/_core.scss
+++ b/src/styles/_core.scss
@@ -6,13 +6,11 @@ html {
 }
 
 body {
+  height: 100%;
   background: #000;
   font-family: "Lato", sans-serif;
-  display: flex;
-  flex-direction: column;
   color: #fff;
   min-width: 320px;
-  min-height: 100%;
   font-size: 1rem;
   line-height: 1.8em;
 }
@@ -45,6 +43,12 @@ svg,
 img {
   vertical-align: middle;
   max-width: 100%;
+}
+
+.ks-page__wrapper {
+  display: flex;
+  flex-direction: column;
+  height: 100%;
 }
 
 .ks-highlight {
